Fix overlapping error class

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -98,7 +98,7 @@ body {
         }
       }
 
-      &.error {
+      &.input-error {
         border-color: $error;
 
         &:focus {
